Se agrega imagenes blancas en la view de proveedores y se termina la view de proveedores y se le agrego los hover a los tr de las tablas de las views , ahora voy a hacer correciones que hablo la dictadura

--- a/src/layouts/Gerente/Envios/Mayorista/estilo.css
+++ b/src/layouts/Gerente/Envios/Mayorista/estilo.css
@@ -187,3 +187,10 @@ main .Table--Container td{
     text-align: center;
     padding: 5px 30px;
 }
+main .Table--Container tbody tr{
+    transition: .1s linear;
+}
+main .Table--Container tbody tr:hover{
+    background-color: var(--ColorNavigatorBar);
+    color: var(--HoverColor);
+}
