--- a/src/layouts/Gerente/Proveedor/Proveedor.html
+++ b/src/layouts/Gerente/Proveedor/Proveedor.html
@@ -53,16 +53,16 @@
                     <h3>V-316088291</h3>
                 </article>
                 <article class="Icon--proveedor">
-                    <img src="../../../../public/images/icons/add.png" alt="Agregar" title="Agregar proveedor">
-                    <img src="../../../../public/images/icons/delete.png" alt="Eliminar" title="Eliminar proveedor">
-                    <img src="../../../../public/images/icons/pencil.png" alt="Modificar" title="Modificar proveedor">
+                    <img src="../../../../public/images/icons/Añadir--white.png" alt="Agregar" title="Agregar proveedor">
+                    <img src="../../../../public/images/icons/Eliminar--white.png" alt="Eliminar" title="Eliminar proveedor">
+                    <img src="../../../../public/images/icons/Pencil--white.png" alt="Modificar" title="Modificar proveedor">
                 </article>
             </section>
-            <section class="Input--Container">
-                <input type="search" placeholder="Busacar proveedor">
-                <img src="" alt="Lupa">
-            </section>
             <section class="Table--Container">
+                <div class="Input--Container">
+                    <input type="search" placeholder="Buscar proveedor">
+                    <img src="../../../../public/images/icons/search.png" alt="Lupa">
+                </div>
                 <table>
                     <caption>Lista de Proveedores</caption>
                     <thead>
@@ -111,6 +111,7 @@
                     </tbody>
                 </table>
             </section>
+            
         </div>
     </main>
 </body>
