Se inicia la view de avisos

--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -32,5 +32,10 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="Content">
+            
+        </div>
+    </main>
 </body>
 </html>
