--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Avisos</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../header-sidebar/Estilo.css">
 </head>
 <body>
     <header>
@@ -33,9 +34,26 @@
         </nav>
     </header>
     <main>
-        <div class="Content">
-            
-        </div>
+        <section class="Content">
+            <article class="Reportes--Container">
+                <div class="aviso">
+                    <span>Nuevo reporte</span>
+                    <div class="Input--Container">
+                        <input type="text" placeholder="Escribir el reporte">
+                        <img src="" alt="icon">
+                    </div>
+                </div>
+                <div class="Tipo--aviso">
+                    <select>
+                        <option value="Envio">Envio</option>
+                        <option value="Proveedor">Proveedor</option>
+                        <option value="Personal">Personal</option>
+                        <option value="Producto">Producto</option>
+                    </select>
+                </div>
+
+            </article>
+        </section>
     </main>
 </body>
 </html>
