--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Envios</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../../header-sidebar/Estilo.css">
 </head>
 <body>
     <header>
@@ -26,7 +27,7 @@
                 <a href="../../Main/Main.html" class="Link">
                     <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../../public/images/icons/Home.png" title="Envios/pedidos"></Li>
                 </a>
-                <a href="../Avisos/Avisos.html" class="Link">
+                <a href="../../Avisos/Avisos.html" class="Link">
                     <Li class="List--cont"><img alt="Avisos" src="../../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
