--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="../header-sidebar/Estilo.css">
 </head>
 <body>
     <header>
