Se termina la primera parte del diseño de la view de avisos voy por la tabla

--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -37,10 +37,12 @@
         <section class="Content">
             <article class="Reportes--Container">
                 <form class="aviso">
-                    <span>Nuevo reporte</span>
                     <div class="Input--Container">
-                        <input type="text" placeholder="Escribir el reporte" required>
-                        <img src="" alt="icon">
+                        <span>Nuevo reporte</span>
+                        <div class="Input">
+                            <input type="text" placeholder="Escribir el reporte" required>
+                            <img src="../../../../public/images/icons/Cancel.png" alt="icon">
+                        </div>
                     </div>
                     <div class="Tipo--aviso">
                         <select required>
