Se comienza la estructura del main de la view estadistica

--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -33,5 +33,64 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="Content">
+            <article class="Table--Container">
+                <div class="Input--Container">
+                    <input type="search" placeholder="00000">
+                    <img src="" alt="Lupa">
+                </div>
+                <div class="Table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Id Venta</th>
+                                <th>Id Bebida</th>
+                                <th>Cantidad</th>
+                                <th>Ingresos $</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>1</td>
+                                <td>5</td>
+                                <td>25$</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>2</td>
+                                <td>8</td>
+                                <td>45$</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>3</td>
+                                <td>10</td>
+                                <td>55$</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </article>
+            <article class="Coversiones">
+                <div class="Coversion--Container">
+                    <form>
+                        <div class="Dolar">
+                            <input type="text" placeholder="$">
+                        </div>
+                        <span>=</span>
+                        <div class="Bolivares">
+                            <input type="text" placeholder="Bs">
+                        </div>
+                        <div class="Porcentaje">
+                            <h2>Porcentaje de Ganancia</h2>
+                            <div class="Resultado"></div>
+                        </div>
+                    </form>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
