Se termina la estructura Html de la view estadistica y se dan comienzo al estilo de la view

--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -89,6 +89,48 @@
                         </div>
                     </form>
                 </div>
+                <div class="Container"></div>
+                <div class="Productos--Populares">
+                    <table>
+                        <caption>Popular</caption>
+                        <tbody>
+                            <tr>
+                                <td>Ron</td>
+                                <td>95%</td>
+                            </tr>
+                            <tr>
+                                <td>Voodka</td>
+                                <td>75%</td>
+                            </tr>
+                            <tr>
+                                <td>Vulcana</td>
+                                <td>35%</td>
+                            </tr>
+                            <tr>
+                                <td>Black Label</td>
+                                <td>85%</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </article>
+            <article class="Container--Ventas">
+                <div class="Ventas--dia">
+                    <span>Ventas del dia</span>
+                    <span>002</span>
+                </div>
+                <div class="Ventas--mes">
+                    <span>Ventas del mes</span>
+                    <span>002</span>
+                </div>
+                <div class="Ingresos">
+                    <span>Ingresos</span>
+                    <span>1.000.000</span>
+                </div>
+                <div class="Egresos">
+                    <span>Egresos</span>
+                    <span>1.000.000</span>
+                </div>
             </article>
         </section>
     </main>
