Se termina la primera parte del diseño de la view de estadistica , ahora viene lo divertido

--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -38,10 +38,11 @@
             <article class="Table--Container">
                 <div class="Input--Container">
                     <input type="search" placeholder="00000">
-                    <img src="" alt="Lupa">
+                    <img src="../../../../public/images/icons/search.png" alt="Lupa">
                 </div>
                 <div class="Table">
                     <table>
+                        <caption>Tabla de Ventas</caption>
                         <thead>
                             <tr>
                                 <th>Id Venta</th>
