Pelando con el silbon y la sayona , bendito sea el diseño de la pagina dale que si se puede

--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -76,6 +76,7 @@
             </article>
             <article class="Coversiones">
                 <div class="Coversion--Container">
+                    <h2>Conversion Monetaria</h2>
                     <form>
                         <div class="Dolar">
                             <input type="text" placeholder="$">
@@ -89,8 +90,8 @@
                             <div class="Resultado"></div>
                         </div>
                     </form>
+                    <div class="Container"></div>
                 </div>
-                <div class="Container"></div>
                 <div class="Productos--Populares">
                     <table>
                         <caption>Popular</caption>
