--- a/src/layouts/Landing/Template/header.css
+++ b/src/layouts/Landing/Template/header.css
@@ -9,6 +9,7 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Montserrat';
+    overflow-x: hidden;
 }
 
 header{
@@ -118,4 +119,10 @@ header nav ul li:hover{
 main{
     width: 100dvw;
     min-height: 100dvh;
+}
+
+footer{
+    width: 100dvw;
+    height: 30dvh;
+    background-color: var(--black);
 }
