Se adelanta el diseño de la view de estadisticas , sigo en la universidad

--- a/src/layouts/Gerente/Estadistica/estilo.css
+++ b/src/layouts/Gerente/Estadistica/estilo.css
@@ -184,7 +184,12 @@ main .Content .Coversiones .Coversion--Container .Container{
     border-radius: 25px;
     background-color: var(--ColorNavigatorBar);
 }
-
+main .Content .Coversiones .Productos--Populares{
+    border: 1px solid #000;
+    padding: 20px;
+    width: 230px;
+    height: 285px;
+}
 
 
 
