--- a/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
+++ b/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
@@ -27,7 +27,7 @@
                 <a href="../../Main/Main.html" class="Link">
                     <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../../public/images/icons/Home.png" title="Envios/pedidos"></Li>
                 </a>
-                <a href="../Avisos/Avisos.html" class="Link">
+                <a href="../../Avisos/Avisos.html" class="Link">
                     <Li class="List--cont"><img alt="Avisos" src="../../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
