--- a/src/layouts/Gerente/Estadistica/estilo.css
+++ b/src/layouts/Gerente/Estadistica/estilo.css
@@ -187,8 +187,34 @@ main .Content .Coversiones .Coversion--Container .Container{
 main .Content .Coversiones .Productos--Populares{
     border: 1px solid #000;
     padding: 20px;
-    width: 230px;
+    width: 210px;
     height: 285px;
+}
+main .Content .Coversiones .Productos--Populares table{
+    border: 2px solid #aaa;
+    padding: 20px;
+    border-radius: 5px;
+}
+main .Content .Coversiones .Productos--Populares table caption{
+    font-size: 1.5em;
+    letter-spacing: 1px;
+    color: var(--SecondaryColor);
+    font-weight: 600;
+}
+main .Content .Coversiones .Productos--Populares table tr{
+    transition: .1s linear;
+}
+main .Content .Coversiones .Productos--Populares table tr:hover{
+    background-color: var(--ColorNavigatorBar);
+    color: var(--HoverColor);
+    font-weight: 500;
+}
+main .Content .Coversiones .Productos--Populares table tbody td{
+    padding: 3px;
+    border-bottom: 1px solid #aaa;
+    text-align: left;
+    font-size: 1em;
+    font-weight: 600;
 }
 
 
