--- a/src/layouts/Gerente/header-sidebar/Estilo.css
+++ b/src/layouts/Gerente/header-sidebar/Estilo.css
@@ -1,7 +1,6 @@
 header{
     width: 100%;
     height: 100vh;
-    padding: 10px;
 }
 header .Content__header{
     width: 100%;
@@ -11,7 +10,7 @@ header .Content__header{
     align-items: center;
     padding: 15px;
     padding-right: 65px;
-    border: 2px solid #000;
+    border-bottom: 1px solid #000;
     border-left: none;
 }
 header .Content__header img{
@@ -38,7 +37,7 @@ header .Content__header a:hover{
 header .Navigator--bar{
     width: 6%;
     height: 91%;
-    margin-top: 0.5px;
+    
     background-color: var(--ColorNavigatorBar);
     padding: 7px;
 }
