--- a/src/layouts/Gerente/Main/estilo.css
+++ b/src/layouts/Gerente/Main/estilo.css
@@ -15,19 +15,19 @@ font-family: san-ferif y font-size: 14px ya que voy a utilizar em*/
 }
 main{
     position: absolute;
-    left: 310px;
-    top: 180px;
-    width: 55%;
+    left: 210px;
+    top: 90px;
+    border-radius: 15px;
+    box-shadow: 0 0 3px #000;
+    width: 80%;
+    height: 500px;
     display: flex;
-    gap: 45px;
+    gap: 85px;
     padding: 15px;
 }
 main .Avisos--panel{
-    position: relative;
-    left: -155px;
-    top: -75px;
     width: 280px;
-    height: 415px;
+    height: 465px;
     border-radius: 15px;
     box-shadow: 0 0 5px #000;
     padding: 15px;
@@ -35,7 +35,7 @@ main .Avisos--panel{
 main .Avisos--panel .Content--avisos{
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 35px;
     margin-top: 5px;
     margin-bottom: 35px;
 }
@@ -45,6 +45,7 @@ main .Avisos--panel .Hora--avisos{
     width: 105px;
     border: 1px solid #000;
     padding: 5px;
+    border-radius: 15px;
     background-color: var(--SecondaryColor);
     color: var(--PrimaryColor);
     letter-spacing: 0.5px;
@@ -58,6 +59,7 @@ main .Avisos--panel .Fecha--avisos{
     font-size: 1.3em;
     width: 105px;
     padding: 5px;
+    border-radius: 15px;
     background-color: var(--SecondaryColor);
     color: var(--PrimaryColor);
     font-weight: 600;
@@ -71,6 +73,8 @@ main .Avisos--panel .Panel table{
     margin-top: 5px;
     border: 1px solid #aaa;
     padding: 15px;
+    border-radius: 15px;
+    border-collapse: collapse;
 }
 main .Avisos--panel .Panel table caption{
     margin-bottom: 5px;
@@ -86,17 +90,14 @@ main .Avisos--panel .Panel table tr{
     letter-spacing: 1.5px;
 }
 main .Avisos--panel .Panel table td{
-    font-size: 0.7em;
+    font-size: 0.9em;
     border-bottom: 1px solid #aaa;
-    padding: 5px;
+    padding: 10px;
     letter-spacing: 1px;
 }
 main .panel--Estadistica{
     background-color: var(--SecondaryColor);
-    position: relative;
-    top: -80px;
     border-radius: 15px;
-    left: -85px;
     width: 650px;
     height: 230px;
     box-shadow: 0 0 5px #000;
@@ -134,7 +135,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadisitca__1
     padding: 10px;
     text-align: center;
     border: 2px solid #000;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 1.2em;
     font-weight: 600;
     color: var(--ColorNavigatorBar);
@@ -145,7 +146,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadisitca__1
     padding: 10px;
     text-align: center;
     border: 2px solid #000;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 1.2em;
     font-weight: 600;
     color: var(--ColorNavigatorBar);
@@ -168,7 +169,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2
     padding: 10px;
     text-align: center;
     border: 2px solid #000;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 1.2em;
     font-weight: 700;
     color: var(--ColorNavigatorBar);
@@ -182,7 +183,7 @@ main .panel--Estadistica .Content--panel--Estadistica .Container--Estadistica__2
     padding: 10px;
     text-align: center;
     border: 2px solid #000;
-    border-radius: 10px;
+    border-radius: 15px;
     font-size: 1.2em;
     font-weight: 700;
     color: var(--ColorNavigatorBar);
@@ -200,13 +201,14 @@ main .panel--Estadistica .Content--panel--Estadistica .Grafica--Estadistica{
     align-items: center;
     position: relative;
     left: -125px;
+    border-radius: 15px;
     top: 33px;
 }
 
 main .Panel--pedidos{
     position: relative;
-    top: 185px;
-    left: -780px;
+    top: 255px;
+    left: -738px;
     width: 655px;
     height: 210px;
     border-radius: 15px;
@@ -234,21 +236,19 @@ main .Panel--pedidos .Container--pedidos{
     justify-content: space-evenly;
     align-items: center;
     width: 750px;
-    gap: 5px;
-    padding: 10px;
+    gap: 10px;
+    padding: 15px;
     position: relative;
     left: -45px;
     top: -20px;
 }
 main .Panel--pedidos .Container--pedidos .Container--1{
     width: 590px;
-    padding: 5px;
     display: flex;
     justify-content: center;
     gap: 25px;
     margin-top: 2px;
     align-items: center;
-    position: relative;
 }
 main .Panel--pedidos .Container--pedidos .Container--1 .Solicitudes--container{
     width: 190px;
@@ -256,7 +256,7 @@ main .Panel--pedidos .Container--pedidos .Container--1 .Solicitudes--container{
     text-align: center;
     padding: 12px;
     background-color: var(--PrimaryColor);
-    border-radius: 5px;
+    border-radius: 15px;
     font-weight: 700;
 }
 main .Panel--pedidos .Container--pedidos .Container--1 .Solicitudes--container span{
@@ -268,7 +268,7 @@ main .Panel--pedidos .Container--pedidos .Container--1 .Procesados--Container{
     text-align: center;
     padding: 10px;
     background-color: var(--PrimaryColor);
-    border-radius: 5px;
+    border-radius: 15px;
     font-weight: 700;
 }
 main .Panel--pedidos .Container--pedidos .Container--1 .Procesados--Container span{
@@ -280,7 +280,7 @@ main .Panel--pedidos .Container--pedidos .Container--1 .Envios--Regionales{
     text-align: center;
     padding: 10px;
     background-color: var(--PrimaryColor);
-    border-radius: 5px;
+    border-radius: 15px;
     font-weight: 700;
 }
 main .Panel--pedidos .Container--pedidos .Container--1 .Envios--Regionales span{
@@ -295,7 +295,6 @@ main .Panel--pedidos .Container--pedidos .Container--1 .Envios--Regionales span 
 }
 main .Panel--pedidos .Container--pedidos .Container--2{
     width: 590px;
-    padding: 5px;
     display: flex;
     gap: 25px;
     justify-content: center;
@@ -308,7 +307,7 @@ main .Panel--pedidos .Container--pedidos .Container--2 .Via--container{
     text-align: center;
     padding: 10px;
     background-color: var(--PrimaryColor);
-    border-radius: 5px;
+    border-radius: 15px;
     font-weight: 700;
 }
 main .Panel--pedidos .Container--pedidos .Container--2 .Via--container span{
@@ -322,7 +321,7 @@ main .Panel--pedidos .Container--pedidos .Container--2 .Completados--Container{
     text-align: center;
     padding: 10px;
     background-color: var(--PrimaryColor);
-    border-radius: 5px;
+    border-radius: 15px;
     font-weight: 700;
 }
 main .Panel--pedidos .Container--pedidos .Container--2 .Completados--Container span{
@@ -334,7 +333,7 @@ main .Panel--pedidos .Container--pedidos .Container--2 .Envios--Nacionales{
     text-align: center;
     padding: 10px;
     background-color: var(--PrimaryColor);
-    border-radius: 5px;
+    border-radius: 15px;
     font-weight: 700;
 }
 main .Panel--pedidos .Container--pedidos .Container--2 .Envios--Nacionales span{
