--- a/src/layouts/Gerente/Avisos/estilo.css
+++ b/src/layouts/Gerente/Avisos/estilo.css
@@ -44,7 +44,7 @@ main .Content .Reportes--Container .aviso .Input--Container{
     justify-content: flex-start;
     flex-flow: column;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: #F4F4F4;
     border: 1px solid var(--SecondaryColor);
 }
@@ -76,6 +76,7 @@ main .Content .Reportes--Container .aviso .Input--Container .Input input::placeh
 }
 main .Content .Reportes--Container .aviso .Input--Container .Input input:hover{
     border-bottom: 2px solid var(--SecondaryColor);
+    border-radius: 5px;
 }
 main .Content .Reportes--Container .aviso .Input--Container .Input img{
     width: 25px;
@@ -84,8 +85,8 @@ main .Content .Reportes--Container .aviso .Input--Container .Input img{
 }
 main .Content .Reportes--Container .aviso .Tipo--aviso{
     border: 1px solid var(--SecondaryColor);
-    padding: 10px;
-    border-radius: 5px;
+    padding: 15px;
+    border-radius: 15px;
 }
 main .Content .Reportes--Container .aviso .Tipo--aviso select{
     padding: 5px 0px;
@@ -97,8 +98,8 @@ main .Content .Reportes--Container .aviso .Tipo--aviso select{
 }
 main .Content .Reportes--Container .aviso .Fecha--reporte{
     border: 1px solid var(--SecondaryColor);
-    padding: 8px;
-    border-radius: 5px;
+    padding: 15px;
+    border-radius: 15px;
 }
 main .Content .Reportes--Container .aviso .Fecha--reporte input{
     padding: 6px 5px;
@@ -108,9 +109,9 @@ main .Content .Reportes--Container .aviso .Fecha--reporte input{
     letter-spacing: 1px;
 }
 main .Content .aviso button{
-    padding: 15px 10px;
+    padding: 22px 10px;
     border: 2px solid #000;
-    border-radius: 10px;
+    border-radius: 15px;
     color: #F4F4F4;
     background-color: var(--SecondaryColor);
     border: none;
@@ -127,23 +128,27 @@ main .Content .aviso  button:hover{
 }
 main .Content .Table--Container{
     margin-top: 5px;
-    padding: 15px;
+    padding: 10px;
 }
 main .Content .Table--Container table{
     border: 1px solid #aaa;
+    border-top: none;
     padding: 5px;
     border-radius: 5px;
+    border-spacing: 0;
 }
 main .Content .Table--Container table caption{
     border: 1px solid #aaa;
     border-radius: 5px;
+    border-bottom: none;
     font-size: 1.4em;
     text-transform: capitalize;
     font-weight: 600;
+    padding: 5px;
     letter-spacing: 1px;
 }
 main .Content .Table--Container table th{
-    padding: 0 120px;
+    padding: 5px 120px;
     border: 1px solid #aaa;
 }
 
@@ -153,7 +158,7 @@ main .Content .Table--Container table tr{
 main .Content .Table--Container table td{
     text-align: center;
     padding: 3px 0px;
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
 main .Content .Table--Container table td:nth-child(1){
     text-align: left;
