Se arregla la view de los envios tanto minorista como mayorista

--- a/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
+++ b/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
@@ -40,12 +40,9 @@
                 <img alt="Lupa" src="../../../../../public/images/icons/search.png">
             </div>
             <div class="Minorista--Mayorista">
-                <div class="Minorista">
-                    <a href="../Minorista/Minorista.html">Minorista</a>
-                </div>
-                <hr>
-                <div class="Mayorista">
-                    <span href="../Mayorista/Mayorista.html">Mayorista</span>
+                <a href="../Minorista/Minorista.html">Minorista</a>
+                <div>
+                    <span>Mayorista</span>
                 </div>
             </div>
         </div>
