--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -40,12 +40,10 @@
                 <img alt="Lupa" src="../../../../../public/images/icons/search.png">
             </article>
             <article class="Minorista--Mayorista">
-                <article class="Minorista">
-                    <span>Minorista</span>
-                </article>
-                <article class="Mayorista">
-                    <a href="../Mayorista/Mayorista.html">Mayorista</a>
-                </article>
+                <div>
+                    <span href="#">Minorista</span>
+                </div>
+                <a href="../Mayorista/Mayorista.html">Mayorista</a>
             </article>
         </section>
         <section class="Table--Container">
